near-sdk/compilation_tests/bad_argument.stderr
error: Unsupported argument type.
  --> $DIR/bad_argument.rs:28:1
   |
28 | #[near_bindgen]
   | ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `near_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
